Fixed layout spacing, watermark and margins

--- a/pages/styles/summary.css
+++ b/pages/styles/summary.css
@@ -4,6 +4,11 @@ body {
   color: black;
 }
 
+body.watermark .lh-box .lh-body{
+  background-image: url('/pages/images/dev_watermark.png');
+
+}
+
 .lh-box {
   background-color: black;
   border-radius: 5px;
@@ -220,11 +225,11 @@ h1, h2, h3, h4, h5,
 }
 .lh-box .lh-heading {
     font-weight: 400;
-    font-size: 3.0em;
+    font-size: 3.0vmax;
     letter-spacing: 2px;
 }
 .lh-box .lh-details {
-    font-size: 1.2em;
+    font-size: 1vmax;
     padding-top: 10px;
     font-weight: 600;
 }
